<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp"
    >

   <TextView
       android:id="@+id/input"
       android:layout_width="match_parent"
       android:layout_height="60dp"
       />
   <Button
       android:id="@+id/num_1"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginLeft="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
       android:text="1"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/input"
       />

   <Button
       android:id="@+id/num_2"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
       android:text="2"
       app:layout_constraintEnd_toStartOf="@+id/num_3"
       app:layout_constraintStart_toEndOf="@+id/num_1"
       app:layout_constraintTop_toBottomOf="@+id/input"
       />

   <Button
       android:id="@+id/num_3"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
       android:text="3"
       app:layout_constraintEnd_toStartOf="@+id/plus"
       app:layout_constraintTop_toBottomOf="@+id/input"
       />

   <Button
       android:id="@+id/num_4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
       android:text="4"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/num_1"
       />

   <Button
       android:id="@+id/num_5"
       android:layout_height="wrap_content"
       android:layout_width="0dp"
       android:layout_marginBottom="8dp"
       android:layout_marginEnd="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
       android:text="5"
       app:layout_constraintBottom_toTopOf="@+id/num_9"
       app:layout_constraintEnd_toStartOf="@+id/num_6"
       app:layout_constraintStart_toEndOf="@+id/num_4"
       app:layout_constraintTop_toBottomOf="@+id/num_3"
       />

   <Button
       android:id="@+id/num_6"
       android:layout_width="wrap_content"
       android:layout_height="51dp"
       android:layout_marginEnd="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
       android:text="6"
       app:layout_constraintEnd_toStartOf="@+id/multiply"
       app:layout_constraintTop_toBottomOf="@+id/num_3"
       />

   <Button
       android:id="@+id/num_7"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
       android:text="7"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/num_4"
       />

   <Button
       android:id="@+id/num_8"
       android:layout_height="wrap_content"
       android:layout_width="0dp"
       android:layout_marginEnd="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
       android:text="8"
       app:layout_constraintEnd_toStartOf="@+id/num_9"
       app:layout_constraintStart_toEndOf="@+id/num_7"
       app:layout_constraintTop_toBottomOf="@+id/num_5"
       />

   <Button
       android:id="@+id/num_9"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
       android:text="9"
       app:layout_constraintEnd_toStartOf="@+id/minus"
       app:layout_constraintTop_toBottomOf="@+id/num_6"
       />


   <Button
       android:id="@+id/num_0"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
       android:text="0"
       app:layout_constraintEnd_toStartOf="@+id/num_9"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/num_8"
       />


   <Button
       android:id="@+id/plus"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
       android:text="+"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/input"
       />

   <Button
       android:id="@+id/minus"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
       android:text="-"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/multiply"
       />

   <Button
       android:id="@+id/multiply"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="8dp"
       android:text="*"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/plus"
       />

   <Button
       android:id="@+id/equals"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
       android:text="="
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/num_0"
       app:layout_constraintTop_toBottomOf="@+id/minus"
       />


</android.support.constraint.ConstraintLayout>